unpackaged/objects/Opportunity.object
<CustomObject>
	<fields>
		<fullName>Budget_Confirmed__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Budget Confirmed</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Discovery_Completed__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Discovery Completed</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Loss_Reason__c</fullName>
		<label>Loss Reason</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Lost to Competitor</fullName>
				</value>
				<value>
					<fullName>No Budget / Lost Funding</fullName>
				</value>
				<value>
					<fullName>No Decision / Non-Responsive</fullName>
				</value>
				<value>
					<fullName>Price</fullName>
				</value>
				<value>
					<fullName>Other</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>ROI_Analysis_Completed__c</fullName>
		<defaultValue>false</defaultValue>
		<label>ROI Analysis Completed</label>
		<type>Checkbox</type>
	</fields>
	<listViews>
		<fullName>AllOpportunities</fullName>
		<columns>OPPORTUNITY.NAME</columns>
		<columns>ACCOUNT.NAME</columns>
		<columns>OPPORTUNITY.AMOUNT</columns>
		<columns>OPPORTUNITY.CLOSE_DATE</columns>
		<columns>OPPORTUNITY.STAGE_NAME</columns>
		<columns>OPPORTUNITY.PROBABILITY</columns>
		<columns>OPPORTUNITY.TYPE</columns>
		<columns>OPPORTUNITY.LEAD_SOURCE</columns>
		<columns>CORE.USERS.FULL_NAME</columns>
		<filterScope>Everything</filterScope>
		<label>All Opportunities</label>
	</listViews>
	<listViews>
		<fullName>ClosingNextMonth</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>OPPORTUNITY.CLOSED</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<filters>
			<field>OPPORTUNITY.CLOSE_DATE</field>
			<operation>equals</operation>
			<value>NEXT_MONTH</value>
		</filters>
		<label>Closing Next Month</label>
	</listViews>
	<listViews>
		<fullName>ClosingThisMonth</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>OPPORTUNITY.CLOSED</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<filters>
			<field>OPPORTUNITY.CLOSE_DATE</field>
			<operation>equals</operation>
			<value>THIS_MONTH</value>
		</filters>
		<label>Closing This Month</label>
	</listViews>
	<listViews>
		<fullName>Default_Opportunity_Pipeline</fullName>
		<booleanFilter>(1 OR 2)</booleanFilter>
		<filterScope>Mine</filterScope>
		<filters>
			<field>OPPORTUNITY.CLOSED</field>
			<operation>equals</operation>
			<value>0</value>
		</filters>
		<filters>
			<field>OPPORTUNITY.CLOSE_DATE</field>
			<operation>greaterOrEqual</operation>
			<value>LAST_N_DAYS:30</value>
		</filters>
		<label>Opportunity Pipeline</label>
	</listViews>
	<listViews>
		<fullName>MyOpportunities</fullName>
		<filterScope>Mine</filterScope>
		<label>My Opportunities</label>
	</listViews>
	<listViews>
		<fullName>NewThisWeek</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>OPPORTUNITY.CREATED_DATE</field>
			<operation>equals</operation>
			<value>THIS_WEEK</value>
		</filters>
		<label>New This Week</label>
	</listViews>
	<listViews>
		<fullName>Won</fullName>
		<filterScope>Everything</filterScope>
		<filters>
			<field>OPPORTUNITY.WON</field>
			<operation>equals</operation>
			<value>1</value>
		</filters>
		<filters>
			<field>OPPORTUNITY.CLOSED</field>
			<operation>equals</operation>
			<value>1</value>
		</filters>
		<label>Won</label>
	</listViews>
	<sharingModel>Read</sharingModel>
</CustomObject>